--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "The Tab for a Cause Team",
   "dependencies": {
+    "browser-detect": "^0.2.26",
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-jss": "^1.5.12",
@@ -19,7 +20,7 @@
     "develop": "gatsby develop",
     "format": "eslint --fix 'src/**/*.js'",
     "lint": "eslint 'src/**/*.js'",
-    "test": "yarn run lint && jest"
+    "test": "yarn run lint && jest --env=jsdom"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -35,6 +36,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.3",
+    "jsdom": "^11.7.0",
     "prettier": "^1.11.1",
     "react-test-renderer": "^15.5.0"
   },
