--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
   ],
   "globals": {
     "window": true,
-    "console": true
+    "console": true,
+    "module": true
   },
   "rules": {
     "no-console": "off"
