--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
   },
   "jest": {
     "collectCoverageFrom": ["src/**/*.{js,jsx}"],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    },
     "setupTestFrameworkScriptFile": "<rootDir>/src/setupTests.js",
     "testPathIgnorePatterns": [
       "<rootDir>[/\\\\](build|dist|docs|public|node_modules|.cache)[/\\\\]"
