--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-typography": "^1.7.18",
     "gatsby-source-filesystem": "^1.5.34",
     "gatsby-transformer-yaml": "^1.5.16",
+    "lodash": "^4.17.10",
     "material-ui": "^1.0.0-beta.41",
     "react-helmet": "^5.2.0",
     "react-responsive": "^4.1.0"
