--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "The Tab for a Cause Team",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "browser-detect": "^0.2.26",
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
