--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-transformer-yaml": "^1.5.16",
     "lodash": "^4.17.10",
     "material-ui": "^1.0.0-beta.41",
+    "mdi-material-ui": "^4.0.0",
     "react-helmet": "^5.2.0",
     "react-responsive": "^4.1.0"
   },
