--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "material-ui": "^1.0.0-beta.41",
     "mdi-material-ui": "^4.0.0",
     "react-helmet": "^5.2.0",
-    "react-responsive": "^4.1.0"
+    "react-responsive": "^4.1.0",
+    "react-transition-group": "^2.3.1"
   },
   "keywords": [
     "tab",
