Use script file

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,7 @@ deploy:
   # S3 deployment with fine-grained cache control not yet supported by TravisCI
   # https://github.com/travis-ci/dpl/issues/486
   provider: script
-  script:
-    # Sync built files. Cache non-HTML files.
-    - aws s3 sync public/ s3://dev-tab-website --region us-west-2 --exclude "*" --include "*.html" --cache-control no-cache --metadata-directive REPLACE
-    - aws s3 sync public/ s3://dev-tab-website --region us-west-2 --include "*" --exclude "*.html" --cache-control max-age=31536000 --metadata-directive REPLACE
+  script: bash ./scripts/deploy.sh
   skip_cleanup: true
 env:
   global:
