--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
     "window": true,
     "console": true,
     "module": true,
-    "graphql": true
+    "graphql": true,
+    "require": true
   },
   "rules": {
     "no-console": "off",
