--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -1,89 +1,88 @@
-# TODO: add PDF URLs
 - quarter: 3
   year: 2011
-  pdfUrl: '/'
+  pdfUrl: '/financials/2011-Q3.pdf'
 - quarter: 4
   year: 2011
-  pdfUrl: '/'
+  pdfUrl: '/financials/2011-Q4.pdf'
 
 - quarter: 1
   year: 2012
-  pdfUrl: '/'
+  pdfUrl: '/financials/2012-Q1.pdf'
 - quarter: 2
   year: 2012
-  pdfUrl: '/'
+  pdfUrl: '/financials/2012-Q2.pdf'
 - quarter: 3
   year: 2012
-  pdfUrl: '/'
+  pdfUrl: '/financials/2012-Q3.pdf'
 - quarter: 4
   year: 2012
-  pdfUrl: '/'
+  pdfUrl: '/financials/2012-Q4.pdf'
 
 - quarter: 1
   year: 2013
-  pdfUrl: '/'
+  pdfUrl: '/financials/2013-Q1.pdf'
 - quarter: 2
   year: 2013
-  pdfUrl: '/'
+  pdfUrl: '/financials/2013-Q2.pdf'
 - quarter: 3
   year: 2013
-  pdfUrl: '/'
+  pdfUrl: '/financials/2013-Q3.pdf'
 - quarter: 4
   year: 2013
-  pdfUrl: '/'
+  pdfUrl: '/financials/2013-Q4.pdf'
 
 - quarter: 1
   year: 2014
-  pdfUrl: '/'
+  pdfUrl: '/financials/2014-Q1.pdf'
 - quarter: 2
   year: 2014
-  pdfUrl: '/'
+  pdfUrl: '/financials/2014-Q2.pdf'
 - quarter: 3
   year: 2014
-  pdfUrl: '/'
+  pdfUrl: '/financials/2014-Q3.pdf'
 - quarter: 4
   year: 2014
-  pdfUrl: '/'
+  pdfUrl: '/financials/2014-Q4.pdf'
 
 - quarter: 1
   year: 2015
-  pdfUrl: '/'
+  pdfUrl: '/financials/2015-Q1.pdf'
 - quarter: 2
   year: 2015
-  pdfUrl: '/'
+  pdfUrl: '/financials/2015-Q2.pdf'
 - quarter: 3
   year: 2015
-  pdfUrl: '/'
+  pdfUrl: '/financials/2015-Q3.pdf'
 - quarter: 4
   year: 2015
-  pdfUrl: '/'
+  pdfUrl: '/financials/2015-Q4.pdf'
 
 - quarter: 1
   year: 2016
-  pdfUrl: '/'
+  pdfUrl: '/financials/2016-Q1.pdf'
 - quarter: 2
   year: 2016
-  pdfUrl: '/'
+  pdfUrl: '/financials/2016-Q2.pdf'
 - quarter: 3
   year: 2016
-  pdfUrl: '/'
+  pdfUrl: '/financials/2016-Q3.pdf'
 - quarter: 4
   year: 2016
-  pdfUrl: '/'
+  pdfUrl: '/financials/2016-Q4.pdf'
 
 - quarter: 1
   year: 2017
-  pdfUrl: '/'
+  pdfUrl: '/financials/2017-Q1.pdf'
 - quarter: 2
   year: 2017
-  pdfUrl: '/'
+  pdfUrl: '/financials/2017-Q2.pdf'
 - quarter: 3
   year: 2017
-  pdfUrl: '/'
+  pdfUrl: '/financials/2017-Q3.pdf'
 - quarter: 4
   year: 2017
-  pdfUrl: '/'
+  pdfUrl: '/financials/2017-Q4.pdf'
 
 - quarter: 1
   year: 2018
-  pdfUrl: '/'
+  pdfUrl: '/financials/2018-Q1.pdf'
