--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -150,3 +150,14 @@
   path: redditad4
 - referrerId: 103
   path: redditad5
+- referrerId: 104
+- referrerId: 105
+- referrerId: 106
+- referrerId: 107
+- referrerId: 108
+- referrerId: 109
+- referrerId: 110
+- referrerId: 111
+- referrerId: 112
+  path: captainmidnight
+ 
