--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -162,4 +162,109 @@
   path: captainmidnight
 - referrerId: 113
   path: middle8
- 
+- referrerId: 114
+  path: misteramazing
+- referrerId: 115
+  path: technicality
+- referrerId: 116
+  path: imaginary
+- referrerId: 117
+  path: chubbyemu
+- referrerId: 118
+  path: backfocus
+- referrerId: 119
+  path: realengineering
+- referrerId: 120
+  path: wonderwhy
+- referrerId: 121
+  path: 12tone
+- referrerId: 122
+  path: citybeautiful
+- referrerId: 123
+  path: airplanemode
+- referrerId: 124
+  path: betterelevation
+- referrerId: 125
+  path: badversion
+- referrerId: 126
+  path: polymatter
+- referrerId: 127
+  path: austinmcconnell
+- referrerId: 128
+  path: drawcuriosity
+- referrerId: 129
+  path: terriblewritingadvice
+- referrerId: 130
+  path: nowyouseeit
+- referrerId: 131
+  path: upandatom
+- referrerId: 132
+  path: asx
+- referrerId: 133
+  path: suibhne
+- referrerId: 134
+  path: beard
+- referrerId: 135
+  path: releasenotes
+- referrerId: 136
+  path: joescott
+- referrerId: 137
+  path: gruber
+- referrerId: 138
+  path: sciencewithkatie
+- referrerId: 139
+  path: kentobento
+- referrerId: 140
+  path: featurehistory
+- referrerId: 141
+  path: lindsayellis
+- referrerId: 142
+  path: techaltar
+- referrerId: 143
+  path: minutephysics
+- referrerId: 144
+  path: lfts
+- referrerId: 145
+  path: mikeboyd
+- referrerId: 146
+  path: potterless
+- referrerId: 147
+  path: tierzoo
+- referrerId: 148
+  path: nutshell
+- referrerId: 149
+  path: vector
+- referrerId: 150
+  path: justwrite
+- referrerId: 151
+  path: wendover
+- referrerId: 152
+  path: samonella
+- referrerId: 153
+  path: simonclark
+- referrerId: 154
+  path: tibees
+- referrerId: 155
+  path: cig
+- referrerId: 156
+  path: thomasfrank
+- referrerId: 157
+  path: msbeautyphile
+- referrerId: 158
+  path: knowingbetter
+- referrerId: 159
+  path: casuallyexplained
+- referrerId: 160
+- referrerId: 161
+- referrerId: 162
+- referrerId: 163
+- referrerId: 164
+- referrerId: 165
+- referrerId: 166
+- referrerId: 167
+- referrerId: 168
+- referrerId: 169
+- referrerId: 170
+- referrerId: 171
+- referrerId: 172
+- referrerId: 173 
