--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "format": "eslint --fix 'src/**/*.js'",
     "lint": "eslint 'src/**/*.js'",
     "serve": "gatsby serve",
-    "test": "yarn run lint && jest --env=jsdom"
+    "test": "yarn run lint && jest --env=jsdom",
+    "test:watch": "jest --env=jsdom --watch"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
