--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^1.0.0-beta.43",
     "babel-polyfill": "^6.26.0",
     "browser-detect": "^0.2.26",
+    "common-tags": "^1.8.0",
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
