Add financial reports for 2018 Q2 and Q3

--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -86,3 +86,9 @@
 - quarter: 1
   year: 2018
   pdfUrl: '/financials/2018-Q1.pdf'
+- quarter: 2
+  year: 2018
+  pdfUrl: '/financials/2018-Q2.pdf'
+- quarter: 3
+  year: 2018
+  pdfUrl: '/financials/2018-Q3.pdf'
