--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -302,3 +302,7 @@
 - referrerId: 204
 - referrerId: 205
   path: backfocus
+- referrerId: 206
+  path: jointheparty
+- referrerId: 207
+  path: horse
