--- a/src/data/charities/charities.yml
+++ b/src/data/charities/charities.yml
@@ -4,4 +4,4 @@
   # This is a quick hack. See:
   # https://www.gatsbyjs.org/docs/adding-images-fonts-files/#query-for-file-in-graphql-queries-using-gatsby-source-filesystem
   # https://github.com/gatsbyjs/gatsby/issues/2817#issuecomment-342319515
-  impactImgPath: /charities/givedirectly.jpg
+  impactImgPath: /charities/givedirectly-2.jpg
