--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -321,3 +321,11 @@
 - referrerId: 220
 - referrerId: 221
   path: legaleagle
+- referrerId: 222
+- referrerId: 223
+- referrerId: 224
+- referrerId: 225
+- referrerId: 226
+- referrerId: 227
+- referrerId: 228
+  path: codingtrain
