--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -329,3 +329,11 @@
 - referrerId: 227
 - referrerId: 228
   path: codingtrain
+- referrerId: 229
+- referrerId: 230
+- referrerId: 231
+- referrerId: 232
+- referrerId: 234
+  path: unwell
+- referrerId: 235
+  path: cultivatingspace
