--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -337,3 +337,7 @@
   path: unwell
 - referrerId: 235
   path: cultivatingspace
+- referrerId: 236
+  path: suibhne
+- referrerId: 237
+  path: mariana
