--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -341,3 +341,59 @@
   path: suibhne
 - referrerId: 237
   path: mariana
+- referrerId: 238
+  path: animalogic
+- referrerId: 239
+  path: beyondthescreenplay
+- referrerId: 240
+  path: braincraft
+- referrerId: 241
+  path: cpggrey
+- referrerId: 242
+  path: cinemawins
+- referrerId: 243
+  path: curiouselephant
+- referrerId: 244
+  path: funscience
+- referrerId: 245
+  path: hbomberguy
+- referrerId: 246
+  path: hellointernet
+- referrerId: 247
+  path: historybuffs
+- referrerId: 248
+  path: kaptainkristian
+- referrerId: 249
+  path: medlifecrisis
+- referrerId: 250
+  path: mustard
+- referrerId: 251
+  path: nando
+- referrerId: 252
+  path: patrickwillems
+- referrerId: 253
+  path: philosophytube
+- referrerId: 254
+  path: polyphonic
+- referrerId: 255
+  path: bunnyhop
+- referrerId: 256
+  path: t1j
+- referrerId: 257
+  path: talefoundry
+- referrerId: 258
+  path: financialdiet
+- referrerId: 259
+  path: thetalkshow
+- referrerId: 260
+  path: unodos
+- referrerId: 261
+  path: upandatom
+- referrerId: 262
+  path: volksgeist
+- referrerId: 263
+  path: vox
+- referrerId: 264
+  path: voxborders
+- referrerId: 265
+  path: williamfox
