--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -95,3 +95,7 @@
 - quarter: 4
   year: 2018
   pdfUrl: '/financials/2018-Q4.pdf'
+
+- quarter: 1
+  year: 2019
+  pdfUrl: '/financials/2019-Q1.pdf'
