--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "The Tab for a Cause Team",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@material-ui/icons": "^1.0.0-beta.43",
     "@reach/router": "^1.1.1",
     "browser-detect": "^0.2.26",
