--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "The Tab for a Cause Team",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@material-ui/icons": "^1.0.0-beta.43",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "@reach/router": "^1.1.1",
-    "browser-detect": "^0.2.26",
+    "browser-detect": "^0.2.28",
     "common-tags": "^1.8.0",
     "gatsby": "^2.5.3",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
@@ -20,15 +21,15 @@
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-filesystem": "^2.0.36",
     "gatsby-transformer-yaml": "^2.1.12",
-    "lodash": "^4.17.10",
-    "material-ui": "^1.0.0-beta.41",
-    "mdi-material-ui": "^4.0.0",
-    "moment": "^2.22.2",
+    "lodash": "^4.17.11",
+    "material-ui": "^0.20.2",
+    "mdi-material-ui": "^5.11.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
-    "react-slick": "^0.23.1",
-    "react-transition-group": "^2.3.1",
+    "react-helmet": "^5.2.1",
+    "react-slick": "^0.24.0",
+    "react-transition-group": "^4.0.1",
     "react-typography": "^0.16.19",
     "slick-carousel": "^1.8.1",
     "typography": "^0.16.19"
