--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-jss": "^8.6.1",
     "react-slick": "^0.24.0",
     "react-transition-group": "^4.0.1",
     "react-typography": "^0.16.19",
