--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gatsby-source-filesystem": "^2.0.36",
     "gatsby-transformer-yaml": "^2.1.12",
     "lodash": "^4.17.11",
-    "material-ui": "^0.20.2",
+    "material-ui": "^1.0.0-beta.47",
     "mdi-material-ui": "^5.11.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
