--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "gatsby-source-filesystem": "^2.0.36",
     "gatsby-transformer-yaml": "^2.1.12",
     "lodash": "^4.17.11",
-    "material-ui": "^1.0.0-beta.47",
     "mdi-material-ui": "^5.11.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
@@ -56,6 +55,7 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/codemod": "^1.1.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-plugin-module-resolver": "^3.2.0",
