--- a/.babelrc
+++ b/.babelrc
@@ -15,10 +15,7 @@
     ["module-resolver", {
       "root": ["./"],
       "alias": {
-        "components": "./src/components",
-        "img": "./src/img",
-        "utils": "./src/utils",
-        "themes": "./src/themes"
+        "src": "./src/"
       }
     }],
     ["@babel/plugin-transform-runtime",
