--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "format": "eslint --fix 'src/**/*.js'",
     "lint": "eslint 'src/**/*.js'",
     "serve": "GATSBY_TELEMETRY_DISABLED=1 gatsby serve",
-    "test": "yarn run lint && jest --env=jsdom",
+    "test": "yarn run lint && jest --env=jsdom --coverage && yarn run test:codecov",
+    "test:codecov": "if-env CI=true && codecov || echo 'Skipping test coverage logging.'",
     "test:watch": "jest --env=jsdom --watch"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "babel-jest": "^24.8.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-gatsby": "^0.1.11",
+    "codecov": "^3.5.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.0",
     "enzyme-to-json": "^3.3.5",
@@ -66,6 +68,7 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
+    "if-env": "^1.0.4",
     "jest": "^24.8.0",
     "jsdom": "^15.1.0",
     "prettier": "^1.17.1",
