--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.5.7",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.0.20",
+    "gatsby-plugin-material-ui": "^1.2.5",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sentry": "^1.0.1",
