--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
+    "esm": "^3.2.25",
     "if-env": "^1.0.4",
     "jest": "^24.8.0",
     "jsdom": "^15.1.0",
