--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "version": "1.0.0",
   "author": "The Tab for a Cause Team",
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/icons": "^4.0.0-rc.0",
+    "@material-ui/styles": "^4.0.0-rc.0",
     "@reach/router": "^1.1.1",
     "browser-detect": "^0.2.28",
     "common-tags": "^1.8.0",
     "gatsby": "^2.5.7",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.0.20",
-    "gatsby-plugin-material-ui": "^1.2.5",
+    "gatsby-plugin-material-ui": "^2.0.0-beta.2",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sentry": "^1.0.1",
