--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -408,4 +408,32 @@
   path: flashforward
 - referrerId: 274
   path: indieland
- 
+- referrerId: 275
+- referrerId: 276
+- referrerId: 277
+- referrerId: 278
+- referrerId: 279
+- referrerId: 280
+- referrerId: 281
+- referrerId: 282
+- referrerId: 283
+- referrerId: 284
+- referrerId: 285
+- referrerId: 286
+- referrerId: 287
+- referrerId: 288
+  path: albasalix
+- referrerId: 289
+  path: otherbothers
+- referrerId: 290
+  path: civilized
+- referrerId: 291
+  path: funcity
+- referrerId: 292
+  path: rudemagic
+- referrerId: 293
+  path: whatsthatsound
+- referrerId: 294
+  path: quinton
+- referrerId: 295
+  path: allenpan 
