--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -437,3 +437,21 @@
   path: quinton
 - referrerId: 295
   path: allenpan 
+- referrerId: 296
+  path: rudetales
+- referrerId: 297
+  path: mostqueer
+- referrerId: 298
+  path: extraneous
+- referrerId: 299
+  path: jumpscare
+- referrerId: 300
+  path: newmistakes
+- referrerId: 301
+  path: pottercast
+- referrerId: 302
+  path: roll934
+- referrerId: 303
+  path: arden
+- referrerId: 304
+  path: hitthebricks
