--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -461,3 +461,11 @@
   path: bc
 - referrerId: 307
   path: animalogic2
+- referrerId: 308
+  path: good
+- referrerId: 309
+  path: goodgoodgood
+- referrerId: 310
+  path: goodnewspaper
+- referrerId: 311
+  path: goodnewsletter
