--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -489,3 +489,11 @@
   path: timtom
 - referrerId: 321
   path: tommycraze
+- referrerId: 322
+- referrerId: 323
+- referrerId: 324
+  path: binkovs
+- referrerId: 325
+  path: nonplussed
+- referrerId: 326
+  path: healthygeek
