--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.0.0-rc.0",
     "@material-ui/styles": "^4.0.0-rc.0",
     "@reach/router": "^1.1.1",
+    "bowser": "^2.9.0",
     "browser-detect": "^0.2.28",
     "common-tags": "^1.8.0",
     "gatsby": "^2.6.0",
