--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "version": "1.0.0",
   "author": "The Tab for a Cause Team",
   "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
-    "@material-ui/icons": "^4.0.0-rc.0",
-    "@material-ui/styles": "^4.0.0-rc.0",
-    "@reach/router": "^1.1.1",
-    "bowser": "^2.9.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
+    "@reach/router": "^1.3.4",
+    "bowser": "^2.11.0",
     "common-tags": "^1.8.0",
-    "gatsby": "^2.6.0",
-    "gatsby-plugin-facebook-pixel": "^1.0.3",
-    "gatsby-plugin-google-analytics": "^2.0.20",
-    "gatsby-plugin-material-ui": "^2.0.0-beta.2",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-robots-txt": "^1.4.0",
+    "gatsby": "^2.24.83",
+    "gatsby-plugin-facebook-pixel": "^1.0.5",
+    "gatsby-plugin-google-analytics": "^2.3.19",
+    "gatsby-plugin-material-ui": "^2.1.10",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sentry": "^1.0.1",
-    "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-plugin-typography": "^2.2.13",
-    "gatsby-source-filesystem": "^2.0.37",
-    "gatsby-transformer-yaml": "^2.1.12",
-    "lodash": "^4.17.19",
-    "mdi-material-ui": "^6.16.0",
-    "moment": "^2.24.0",
-    "qs": "^6.8.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-slick": "^0.24.0",
-    "react-transition-group": "^4.0.1",
+    "gatsby-plugin-sitemap": "^2.4.17",
+    "gatsby-plugin-typography": "^2.5.13",
+    "gatsby-source-filesystem": "^2.3.35",
+    "gatsby-transformer-yaml": "^2.4.15",
+    "lodash": "^4.17.20",
+    "mdi-material-ui": "^6.20.0",
+    "moment": "^2.29.1",
+    "qs": "^6.9.4",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
+    "react-slick": "^0.27.12",
+    "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3",
     "react-typography": "^0.16.19",
     "slick-carousel": "^1.8.1",
@@ -53,29 +53,29 @@
     "test:watch": "jest --env=jsdom --watch"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "@material-ui/codemod": "^1.1.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-preset-gatsby": "^0.1.11",
-    "codecov": "^3.7.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.1",
-    "enzyme-to-json": "^3.3.5",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@material-ui/codemod": "^4.5.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-preset-gatsby": "^0.5.14",
+    "codecov": "^3.8.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
     "esm": "^3.2.25",
     "if-env": "^1.0.4",
-    "jest": "^24.8.0",
-    "jsdom": "^15.1.0",
-    "prettier": "^1.17.1",
-    "react-test-renderer": "^16.8.6"
+    "jest": "^26.6.0",
+    "jsdom": "^16.4.0",
+    "prettier": "^2.1.2",
+    "react-test-renderer": "^16.14.0"
   },
   "jest": {
     "collectCoverageFrom": [
