--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "license": "MPL-2.0",
   "scripts": {
     "build": "GATSBY_TELEMETRY_DISABLED=1 gatsby build",
-    "develop": "GATSBY_TELEMETRY_DISABLED=1 gatsby develop",
+    "develop": "SHOW_MILLION_RAISED_PAGE=true GATSBY_TELEMETRY_DISABLED=1 gatsby develop",
     "format": "eslint --fix 'src/**/*.js'",
     "lint": "eslint 'src/**/*.js'",
     "serve": "GATSBY_TELEMETRY_DISABLED=1 gatsby serve",
