--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "^4.10.0",
     "@reach/router": "^1.3.4",
     "bowser": "^2.11.0",
+    "clsx": "^1.1.1",
     "common-tags": "^1.8.0",
     "gatsby": "^2.24.83",
     "gatsby-plugin-facebook-pixel": "^1.0.5",
