--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-share": "^4.3.1",
     "react-slick": "^0.27.12",
     "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3",
