--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -111,3 +111,9 @@
 - quarter: 1
   year: 2020
   pdfUrl: '/financials/2020-Q1.pdf'
+- quarter: 2
+  year: 2020
+  pdfUrl: '/financials/2020-Q2.pdf'
+- quarter: 3
+  year: 2020
+  pdfUrl: '/financials/2020-Q3.pdf'
