--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "lint": "eslint 'src/**/*.js'",
     "serve": "GATSBY_TELEMETRY_DISABLED=1 gatsby serve",
     "test": "yarn run lint && jest --env=jsdom --coverage",
-    "test:watch": "jest --env=jsdom --watch"
+    "test:watch": "jest --env=jsdom --watch",
+    "deploy": "gatsby-plugin-s3 deploy"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -72,6 +73,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "esm": "^3.2.25",
+    "gatsby-plugin-s3": "^0.3.8",
     "if-env": "^1.0.4",
     "jest": "^26.6.0",
     "jsdom": "^16.4.0",
