--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -528,3 +528,7 @@
   path: friendshipping
 - referrerId: 356
   path: veronica
+- referrerId: 357
+  path: startripper
+- referrerId: 358
+  path: ladyhd
