--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -534,3 +534,9 @@
   path: ladyhd
 - referrerId: 359
   path: BigJoel
+- referrerId: 360
+  path: staystrange
+- referrerId: 361
+  path: thisisgood
+- referrerId: 362
+  path: nobadideas
