update deploy script

--- a/.github/workflows/deploy.js.yml
+++ b/.github/workflows/deploy.js.yml
@@ -25,13 +25,13 @@ jobs:
         run: |
           echo "GATSBY_S3_BUCKET_NAME=prod-tab-website" >> "$GITHUB_ENV"
           echo "GATSBY_DOMAIN=tab.gladly.io" >> "$GITHUB_ENV"
-          echo "CATS=true" >> "$GITHUB_ENV"
+          echo "SHOW_CATS_PAGE=true" >> "$GITHUB_ENV"
       - name: Set env vars for dev branch
         if: github.ref == 'refs/heads/dev'
         run: |
           echo "GATSBY_S3_BUCKET_NAME=dev-tab-website" >> "$GITHUB_ENV"
           echo "GATSBY_DOMAIN=dev-tab2017.gladly.io" >> "$GITHUB_ENV"
-          echo "CATS=false" >> "$GITHUB_ENV"
+          echo "SHOW_CATS_PAGE=false" >> "$GITHUB_ENV"
       - name: Install dependencies
         run: yarn install
       - name: Run tests
