--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@reach/router": "^1.3.4",
+    "@use-it/interval": "^1.0.0",
     "bowser": "^2.11.0",
     "clsx": "^1.1.1",
     "common-tags": "^1.8.0",
