--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fullpage/react-fullpage": "^0.1.18",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.10.0",
     "@reach/router": "^1.3.4",
     "@use-it/interval": "^1.0.0",
