--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -540,3 +540,7 @@
   path: thisisgood
 - referrerId: 362
   path: nobadideas
+- referrerId: 412
+  path: thecrack
+- referrerId: 413
+  path: pkmncast
