Update E2E test action

--- a/.github/workflows/run-e2e-tests.js.yml
+++ b/.github/workflows/run-e2e-tests.js.yml
@@ -1,8 +1,6 @@
 name: Run end-to-end tests
 
-# TODO: change to PR only
-on: [push]
-# on: [pull_request]
+on: [pull_request]
 
 env:
   GATSBY_S3_BUCKET_NAME: test-tab-website
