--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bowser": "^2.11.0",
     "clsx": "^1.1.1",
     "common-tags": "^1.8.0",
+    "dotenv-extended": "^2.9.0",
     "gatsby": "^2.24.83",
     "gatsby-plugin-facebook-pixel": "^1.0.5",
     "gatsby-plugin-material-ui": "^2.1.10",
@@ -53,7 +54,8 @@
     "format": "eslint --fix 'src/**/*.js'",
     "lint": "eslint 'src/**/*.js'",
     "serve": "GATSBY_TELEMETRY_DISABLED=1 gatsby serve",
-    "test": "yarn run lint && jest --env=jsdom --coverage",
+    "test": "yarn run lint && jest --env=jsdom --coverage --testPathIgnorePatterns=e2e-tests",
+    "test:e2e": "dotenv-extended --defaults=./.env yarn jest --testPathPattern=e2e-tests.test --watchAll=false",
     "test:watch": "jest --env=jsdom --watch",
     "deploy": "gatsby-plugin-s3 deploy"
   },
@@ -80,7 +82,8 @@
     "jest": "^26.6.0",
     "jsdom": "^16.4.0",
     "prettier": "^2.1.2",
-    "react-test-renderer": "^16.14.0"
+    "react-test-renderer": "^16.14.0",
+    "tab-e2e": "^1.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
