--- a/.github/workflows/run-e2e-tests.js.yml
+++ b/.github/workflows/run-e2e-tests.js.yml
@@ -10,6 +10,17 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      BROWSERSTACK_USER: kevinjennison1
+      BROWSERSTACK_KEY: ${{secrets.BROWSERSTACK_KEY}}
+      INTEGRATION_TEST_USER_EMAIL: ${{secrets.INTEGRATION_TEST_USER_EMAIL}}
+      INTEGRATION_TEST_USER_PASSWORD: ${{secrets.INTEGRATION_TEST_USER_PASSWORD}}
+      MAILOSAUR_SERVER_ID: ${{secrets.MAILOSAUR_SERVER_ID}}
+      MAILOSAUR_API_KEY: ${{secrets.MAILOSAUR_API_KEY}}
+      SELENIUM_DRIVER_TYPE: remote
+      SELENIUM_HOST: https://test-tab2017.gladly.io
+      # A unique build identifier passed to tab-e2e.
+      TRAVIS_BUILD_NUMBER: tab-homepage-${{ github.run_number }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
