--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -546,3 +546,7 @@
   path: pkmncast
 - referrerId: 432
   path: sirpounce
+- referrerId: 436
+  path: instagram
+- referrerId: 442
+  path: illymation
