--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -550,3 +550,7 @@
   path: instagram
 - referrerId: 442
   path: illymation
+- referrerId: 452
+  path: lookup
+- referrerId: 453
+  path: imaginary
