--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.10.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
     "@use-it/interval": "^1.0.0",
     "bowser": "^2.11.0",
@@ -18,15 +20,19 @@
     "dotenv-extended": "^2.9.0",
     "gatsby": "^3.14.0",
     "gatsby-plugin-facebook-pixel": "^1.0.5",
+    "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-material-ui": "^4.0.3",
+    "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-postcss": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-robots-txt": "^1.6.10",
     "gatsby-plugin-sentry": "^1.0.1",
+    "gatsby-plugin-sharp": "^3.14.0",
     "gatsby-plugin-sitemap": "^4.10.0",
     "gatsby-plugin-typography": "^3.14.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-json": "^3.14.0",
+    "gatsby-transformer-sharp": "^3.14.0",
     "gatsby-transformer-yaml": "^3.14.0",
     "lodash": "^4.17.21",
     "mdi-material-ui": "^6.20.0",
