--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -562,3 +562,9 @@
   path: afghanistan
 - referrerId: 472
   path: tt
+- referrerId: 479
+  path: tno
+- referrerId: 480
+  path: queermovie
+- referrerId: 481
+  path: fivefour
