--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.10.0",
     "@reach/router": "^1.3.4",
+    "@storybook/cli": "^6.3.9",
     "@use-it/interval": "^1.0.0",
+    "babel-plugin-react-require": "^3.1.3",
     "bowser": "^2.11.0",
     "clsx": "^1.1.1",
     "common-tags": "^1.8.0",
@@ -58,7 +60,9 @@
     "test": "yarn run lint && jest --env=jsdom --coverage --testPathIgnorePatterns=e2e-tests",
     "test:e2e": "dotenv-extended --defaults=./.env yarn jest --testPathPattern=e2e-tests.test --watchAll=false",
     "test:watch": "jest --env=jsdom --testPathIgnorePatterns=e2e-tests --watch",
-    "deploy": "gatsby-plugin-s3 deploy"
+    "deploy": "gatsby-plugin-s3 deploy",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -66,9 +70,17 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@material-ui/codemod": "^4.5.0",
+    "@storybook/addon-actions": "^6.3.9",
+    "@storybook/addon-essentials": "^6.3.9",
+    "@storybook/addon-links": "^6.3.9",
+    "@storybook/builder-webpack5": "^6.3.9",
+    "@storybook/manager-webpack5": "^6.3.9",
+    "@storybook/react": "^6.3.9",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-gatsby": "^1.14.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
@@ -84,7 +96,9 @@
     "jsdom": "^16.4.0",
     "prettier": "^2.1.2",
     "react-test-renderer": "^16.14.0",
-    "tab-e2e": "^1.1.0"
+    "storybook-addon-gatsby": "^0.0.2",
+    "tab-e2e": "^2.0.1",
+    "webpack": "^5.57.1"
   },
   "jest": {
     "collectCoverageFrom": [
