--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "test:watch": "jest --env=jsdom --testPathIgnorePatterns=e2e-tests --watch",
     "deploy": "gatsby-plugin-s3 deploy",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token ada1c3340c1b"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -84,6 +85,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-gatsby": "^1.14.0",
+    "chromatic": "^5.10.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
