--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -125,3 +125,6 @@
 - quarter: 1
   year: 2021
   pdfUrl: '/financials/2021-Q1.pdf'
+- quarter: 2
+  year: 2021
+  pdfUrl: '/financials/2021-Q2.pdf'
