--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -568,3 +568,7 @@
   path: queermovie
 - referrerId: 481
   path: fivefour
+- referrerId: 485
+  path: DentalDigest
+- referrerId: 486
+  path: MikeShake
