TFAC-540 Building MoneyRaised Section in Landing Page

--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -25,7 +25,7 @@
         "waveColor": "#5094FB"
       },
       "moneyRaised": {
-        "moneyImg": "../../img/cats/1.png"
+        "moneyImg": "../../img/seas/moneyRaised.png"
       },
       "charityIntro": {
         "title": "TODO",
