--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3",
     "react-typography": "^0.16.19",
+    "rehype-react": "^7.0.3",
+    "rehype-sanitize": "^5.0.0",
+    "remark": "^14.0.1",
+    "remark-parse": "^10.0.0",
+    "remark-rehype": "^10.0.0",
     "slick-carousel": "^1.8.1",
     "typography": "^0.16.19"
   },
