--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@luigiminardim/storybook-addon-globals-controls": "^0.1.3",
     "@material-ui/codemod": "^4.5.0",
     "@storybook/addon-actions": "^6.3.9",
     "@storybook/addon-essentials": "^6.3.9",
