--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "gatsby": "^3.14.0",
     "gatsby-plugin-facebook-pixel": "^1.0.5",
     "gatsby-plugin-google-fonts-v2": "^1.0.0",
+    "gatsby-plugin-image": "^2.1.3",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-robots-txt": "^1.6.10",
     "gatsby-plugin-sentry": "^1.0.1",
+    "gatsby-plugin-sharp": "^3.14.0",
     "gatsby-plugin-sitemap": "^4.10.0",
     "gatsby-plugin-typography": "^3.14.0",
     "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-json": "^3.14.0",
+    "gatsby-transformer-sharp": "^3.14.0",
     "gatsby-transformer-yaml": "^3.14.0",
     "lodash": "^4.17.21",
     "mdi-material-ui": "^6.20.0",
