--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "license": "MPL-2.0",
   "scripts": {
     "build": "GATSBY_TELEMETRY_DISABLED=1 gatsby build",
-    "develop": "SHOW_CATS_PAGE=true GATSBY_TELEMETRY_DISABLED=1 gatsby develop",
+    "develop": "SHOW_CATS_PAGE=true GATSBY_TELEMETRY_DISABLED=1 GATSBY_GENERATE_CAUSE_PAGES=true gatsby develop",
     "format": "eslint --fix 'src/**/*.js'",
     "lint": "eslint 'src/**/*.js'",
     "serve": "GATSBY_TELEMETRY_DISABLED=1 gatsby serve",
