programatically fix gatsby images

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     "console": true,
     "module": true,
     "graphql": true,
-    "require": true
+    "require": true,
+    "Image": true
   },
   "rules": {
     "no-console": "off",
