--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -21,7 +21,7 @@
       "landing": {
         "title": "The easiest way to save our seas",
         "subtitle": "Every tab opened raises money for #TeamSeas, an internet-led movement raising $30 million to clean up 30 million pounds of trash from our oceans, rivers, and lakes.",
-        "ctaImg": "../../img/cats/1.png",
+        "ctaImg": "../../img/cats/headerImg.png",
         "waveColor": "#5094FB"
       },
       "moneyRaised": {
