--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,7 @@
     "console": true,
     "module": true,
     "graphql": true,
-    "require": true,
-    "Image": true
+    "require": true
   },
   "rules": {
     "no-console": "off",
