--- a/package.json
+++ b/package.json
@@ -118,7 +118,9 @@
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!**/e2eTests/**",
-      "!**/__tests__/**"
+      "!**/__tests__/**",
+      "!src/**/*.{stories}**",
+      "!src/utils/storybookHelpers/**"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
