--- a/package.json
+++ b/package.json
@@ -116,11 +116,11 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
+      "src/**/*.{js}",
       "!**/e2eTests/**",
       "!**/__tests__/**",
-      "!src/**/*.{stories}**",
-      "!src/utils/storybookHelpers/**"
+      "!src/**/*{stories}*",
+      "!**/storybookHelpers/**"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
