TFAC-759 Creating Cause-Specific Preview Landing Page

--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -8,6 +8,10 @@
         "primaryContrast": "#fff"
       }
     },
+    "causeLaunch" : {
+      "preview": false,
+      "enabled": false
+    },
     "causeId": "SGa6zohkY",
     "metadata": {
       "title": "Tab for TeamSeas - Home",
